center promo video on small screens, fixed font size for large headers on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,7 +4,18 @@ body {
 
 @media screen and (max-width: 700px) {
   .promo-video {
+    width: 100%;
+  }
+
+  .uk-heading-hero {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .promo-video {
       width: 100%;
+      margin: 0 auto;
   }
 }
 
